<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/global_bg_portrait" >
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarAlwaysDrawVerticalTrack="false" >
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content" >
    
		    <TextView
		        android:id="@+id/now_movietitle"
		        android:layout_width="fill_parent"
		        android:text="Movie"
		        android:layout_height="40dp"
		        android:layout_gravity="center"
		        android:paddingLeft="10dp"
		        android:paddingTop="5dp"
		        android:paddingBottom="5dp"
		        android:textStyle="bold"
		        android:background="@drawable/emboss"
		        android:textColor="#fff"
		        android:textSize="20sp" />
    
		    <RelativeLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/transparentborder"
		        android:padding="5dp"
		        android:layout_margin="10dp" >
        
		        <ImageView
			        android:id="@+id/now_poster"
			        android:src="@drawable/ic_launcher"
			        android:layout_width="150dp"
			        android:layout_below="@+id/now_poster"
			        android:contentDescription="@string/contentDescription"
			        android:layout_height="wrap_content"
			        android:layout_alignParentLeft="true"
			        android:layout_margin="10dp" />
        
		        <LinearLayout android:layout_toRightOf="@+id/now_poster"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical" >
            
		            <TextView
			            android:id="@+id/now_starring1"
			            android:text="STARRING:"
			            android:textStyle="italic"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginTop="10dp"
			            android:textColor="#fff"
			            android:textSize="15dp" />
		            
		            <TextView
			            android:id="@+id/now_starring"
			            android:text=""
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="12dp"
			            android:textColor="#fff"
			            android:textSize="13dp" />
        
		            <TextView
			            android:id="@+id/now_genre1"
			            android:text="GENRE:"
			            android:textStyle="italic"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginTop="10dp"
			            android:textColor="#fff"
			            android:textSize="15dp" />
		            
			        <TextView
			            android:id="@+id/now_genre"
			            android:text=""
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="12dp"
			            android:textColor="#fff"
			            android:textSize="13dp" />
	        
        		</LinearLayout>
        		
		        <LinearLayout 
		            android:layout_below="@+id/now_poster"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical" >
		        
			        <TextView
						android:id="@+id/now_summary1"
					    android:text="SUMMARY:"
					    android:textStyle="italic"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:layout_below="@+id/now_poster"
					    android:paddingLeft="10dp"
					    android:textColor="#fff"
					    android:textSize="15dp" />
			        
			        <TextView
						android:id="@+id/now_summary"
					    android:text=""
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:layout_below="@+id/now_poster"
					    android:layout_marginLeft="20dp"
					    android:layout_marginRight="10dp"
					    android:paddingBottom="10dp"
					    android:textColor="#fff"
					    android:textSize="13dp" />
		        
		        </LinearLayout>
        
    		</RelativeLayout>
    
		    <RelativeLayout
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:background="@drawable/transparentborder"
		        android:padding="5dp"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginBottom="10dp" >
		        	
			    <LinearLayout
			        android:orientation="vertical"
	            	android:layout_width="fill_parent"
	        		android:layout_height="wrap_content" >
    
				    <TextView
				        android:id="@+id/where"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:padding="5dp"
				        android:paddingBottom="0dp"
				        android:background="#000"
				        android:textColor="#fff"
				        android:text="@string/whereareyou"
				        android:textStyle="bold"
				        android:textSize="17sp" />
		    
				    <TextView
				        android:id="@+id/metro_manila"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_marginLeft="15dp"
				        android:padding="10dp"
				        android:paddingTop="0dp"
				        android:textColor="#fff"
				        android:text="@string/metromanila"
				        android:textSize="15sp" />
		    
				    <TextView
				        android:id="@+id/luzon"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_marginLeft="15dp"
				        android:padding="10dp"
				        android:paddingTop="0dp"
				        android:textColor="#fff"
				        android:text="@string/luzon"
				        android:textSize="15sp" />
		    
				    <TextView
				        android:id="@+id/vismin"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_marginLeft="15dp"
				        android:padding="10dp"
				        android:paddingTop="0dp"
				        android:textColor="#fff"
				        android:text="@string/vismin"
				        android:textSize="15sp" />
			    
			    </LinearLayout>
		    
		    </RelativeLayout>
    
    	</LinearLayout>
    
    </ScrollView>
    
</LinearLayout>
