<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/global_bg_portrait"
    android:orientation="vertical" >

    <ScrollView
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:scrollbars="none" >
    	
        <LinearLayout
            android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:orientation="vertical" >
    				    
		    <TextView
		        android:id="@+id/movietitle"
		        android:layout_width="fill_parent"
		        android:layout_height="40dp"
		        android:background="@drawable/emboss"
		        android:layout_gravity="center"
		        android:paddingLeft="10dp"
		        android:paddingTop="5dp"
		        android:paddingBottom="5dp"
		        android:textStyle="bold"
		        android:text="@string/movietitle"
		        android:textColor="#fff"
		        android:textSize="20sp" />
				    
		    <TextView
		        android:id="@+id/location_crumbs"
		        android:text=""
		        android:textColor="#fff"
		        android:layout_marginTop="10dp"
		        android:background="#000"
		        android:padding="5dp"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" />
		    		   
		     <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/transparentborder"
		        android:orientation="vertical" 
		        android:layout_margin="10dp" >
		        
		         <TextView
			        android:id="@+id/guarseat"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:background="#000"
			        android:padding="5dp"
			        android:text="General Information"
			        android:textColor="#fff" />
		        		        
		        <TextView
			        android:id="@+id/cinemaname"
			        android:text="Cinema Name: IMAX"
			        android:padding="2dp"
			        android:layout_marginLeft="13dp"
			        android:textSize="13sp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textColor="#fff"/>
		        
		        <TextView
			        android:id="@+id/cinematype"
			        android:text="Cinema Type: 3D"
			        android:padding="2dp"
			        android:layout_marginLeft="13dp"
			        android:textSize="13sp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textColor="#fff"/>
		        		        
		        <TextView
			        android:id="@+id/movieName"
			        android:text="Movie Name: "
			        android:padding="2dp"
			        android:layout_marginLeft="13dp"
			        android:textSize="13sp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textColor="#fff"/>
		        		        
		        <TextView
			        android:id="@+id/ticketprice"
			        android:text="Ticket Price: 250.00"
			        android:padding="2dp"
			        android:layout_marginLeft="13dp"
			        android:textSize="13sp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textColor="#fff"/>
		        		        
		        <TextView
			        android:id="@+id/screeningdate"
			        android:text="Screening Date: March 9, 2013"
			        android:padding="2dp"
			        android:layout_marginLeft="13dp"
			        android:textSize="13sp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textColor="#fff"/>
		        
		        <TextView
			        android:id="@+id/starttime"
			        android:text="Screening Time: "
			        android:padding="2dp"
			        android:layout_marginLeft="13dp"
			        android:textSize="13sp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textColor="#fff"/>
		        		        
		    </LinearLayout>
		    
		    <TextView
		        android:id="@+id/resseat"
		        android:text="@string/reserve_seats"
		        android:background="#a5191970"
		        android:textColor="#fff"
		        android:padding="7dp"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" />
		    
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/transparentborder"
		        android:orientation="vertical" 
		        android:layout_margin="10dp" >
		        
		        <TextView
			        android:id="@+id/availableseats"
			        android:text="Available Seats: 288"
			        android:padding="2dp"
			        android:layout_marginLeft="13dp"
			        android:textSize="13sp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textColor="#fff"/>
		        
		        <TextView
			        android:id="@+id/seatsselected"
			        android:text="Seats Selected: "
			        android:padding="2dp"
			        android:layout_marginLeft="13dp"
			        android:textSize="13sp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textColor="#fff"/>
		        
		    </LinearLayout>	
		    
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/transparentborder"
		        android:orientation="vertical"
		        android:layout_marginLeft="10dp" 
		        android:layout_marginRight="10dp"
		        android:layout_marginBottom="10dp" >	    	    
		    
			    <TextView
			        android:id="@+id/payopt"
			        android:text="@string/payment_options"
			        android:background="#000"
			        android:textColor="#fff"
			        android:padding="10dp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" />
			
			    <RadioGroup
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:background="#a5000000" >
			
			        <RadioButton
			            android:width="20dp"
			            android:height="20dp"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="13dp"
			            android:text="G-Cash"
			            android:textSize="13sp"
			            android:textColor="#fff" />
			        
			        <RadioButton
			            android:width="20dp"
			            android:height="20dp"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="13dp"
			            android:text="VISA, MasterCard"
			            android:textSize="13sp"
			            android:textColor="#fff" />
			        
			        <RadioButton
			            android:width="20dp"
			            android:height="20dp"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="13dp"
			            android:text="Smart Money"
			            android:textSize="13sp"
			            android:textColor="#fff" />
			        
			        <RadioButton
			            android:width="20dp"
			            android:height="20dp"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="13dp"
			            android:text="eCard"
			            android:textSize="13sp"
			            android:textColor="#fff" />
			        
			    </RadioGroup>
					    
		    </LinearLayout>
		    <Button
			        android:id="@+id/next"
			        android:layout_width="wrap_content"
			        android:layout_gravity="right"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="10dp"
			        android:gravity="center"
			        android:text="Purchase >>" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>